--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "munin-front",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "apollo-client-preset": "^1.0.8",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.8",
+    "apollo-boost": "^0.1.27",
+    "apollo-cache-inmemory": "^1.4.2",
     "argparse": "^1.0.10",
     "color": "^3.0.0",
     "date-fns": "^2.0.0-alpha.7",
-    "graphql": "^0.13.1",
+    "graphql": "^14.1.1",
     "graphql-iso-date": "^3.5.0",
     "graphql-tag": "^2.8.0",
     "graphql-type-json": "^0.2.0",
@@ -16,10 +20,10 @@
     "material-ui-icons": "^1.0.0-beta.35",
     "material-ui-pickers": "^1.0.0-rc.1",
     "moment": "^2.21.0",
-    "munin-db": "^0.1.0",
+    "munin-db": "",
     "randomcolor": "^0.5.3",
     "react": "^16.2.0",
-    "react-apollo": "^2.0.4",
+    "react-apollo": "^2.4.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
