--- a/package.json
+++ b/package.json
@@ -3,38 +3,43 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.0.1",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.8",
     "apollo-boost": "^0.1.27",
     "apollo-cache-inmemory": "^1.4.2",
     "argparse": "^1.0.10",
-    "color": "^3.0.0",
-    "date-fns": "^2.0.0-alpha.7",
+    "color": "^3.1.0",
+    "date-fns": "2.0.0-alpha.21",
     "graphql": "^14.1.1",
-    "graphql-iso-date": "^3.5.0",
-    "graphql-tag": "^2.8.0",
-    "graphql-type-json": "^0.2.0",
-    "graphql-yoga": "^1.4.3",
-    "material-ui": "^1.0.0-beta.35",
-    "material-ui-icons": "^1.0.0-beta.35",
-    "material-ui-pickers": "^1.0.0-rc.1",
-    "moment": "^2.21.0",
-    "munin-db": "",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-tag": "^2.10.1",
+    "graphql-type-json": "^0.2.1",
+    "graphql-yoga": "^1.17.0",
+    "material-ui-pickers": "^2.1.1",
+    "moment": "^2.24.0",
+    "munin-db": "^0.2.0",
     "randomcolor": "^0.5.3",
-    "react": "^16.2.0",
+    "react": "^16.7.0",
     "react-apollo": "^2.4.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "recharts": "^1.0.0-beta.10",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.3",
+    "recharts": "^1.4.2",
     "strtotime": "^1.0.0",
-    "typeface-roboto": "0.0.54"
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
