--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "munin-front",
+  "homepage": "/",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
@@ -11,22 +12,25 @@
     "apollo-cache-inmemory": "^1.4.2",
     "argparse": "^1.0.10",
     "color": "^3.1.0",
+    "compression": "^1.7.3",
     "date-fns": "2.0.0-alpha.21",
     "graphql": "^14.1.1",
     "graphql-iso-date": "^3.6.1",
     "graphql-tag": "^2.10.1",
     "graphql-type-json": "^0.2.1",
     "graphql-yoga": "^1.17.0",
+    "lodash.throttle": "^4.1.1",
     "material-ui-pickers": "^2.1.1",
     "moment": "^2.24.0",
     "munin-db": "^0.3.0",
-    "randomcolor": "^0.5.3",
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "recharts": "^1.4.2",
+    "recompose": "^0.30.0",
+    "seedrandom": "^2.4.4",
     "strtotime": "^1.0.0",
     "typeface-roboto": "^0.0.54"
   },
