--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "lodash.throttle": "^4.1.1",
     "material-ui-pickers": "^2.1.1",
     "moment": "^2.24.0",
-    "munin-db": "^0.3.0",
+    "munin-db": "^0.3.1",
     "react": "^16.7.0",
     "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.1",
     "react-scripts": "^2.1.3",
     "recharts": "^1.4.2",
     "recompose": "^0.30.0",
