--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
   "name": "munin-front",
-  "homepage": "/",
-  "version": "0.2.0",
+  "homepage": "/sandbox/munin-front",
+  "version": "0.2.1",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.0.1",
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.8",
-    "apollo-boost": "^0.1.27",
-    "apollo-cache-inmemory": "^1.4.2",
+    "@material-ui/pickers": "latest",
+    "@date-io/date-fns": "^1.3.6",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.0.2",
+    "apollo-boost": "^0.4.1",
+    "apollo-cache-inmemory": "^1.6.1",
     "argparse": "^1.0.10",
-    "color": "^3.1.0",
-    "compression": "^1.7.3",
-    "date-fns": "2.0.0-alpha.21",
-    "graphql": "^14.1.1",
+    "color": "^3.1.2",
+    "compression": "^1.7.4",
+    "date-fns": "2.0.0-alpha.27",
+    "graphql": "^14.3.1",
     "graphql-iso-date": "^3.6.1",
     "graphql-tag": "^2.10.1",
-    "graphql-type-json": "^0.2.1",
-    "graphql-yoga": "^1.17.0",
+    "graphql-type-json": "^0.3.0",
+    "graphql-yoga": "^1.17.4",
     "lodash.throttle": "^4.1.1",
-    "material-ui-pickers": "^2.1.1",
     "moment": "^2.24.0",
     "munin-db": "^0.3.1",
-    "react": "^16.7.0",
-    "react-apollo": "^2.4.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.1",
-    "react-scripts": "^2.1.3",
-    "recharts": "^1.4.2",
+    "react-scripts": "^3.0.1",
+    "recharts": "^1.6.2",
     "recompose": "^0.30.0",
-    "seedrandom": "^2.4.4",
+    "seedrandom": "^3.0.1",
     "strtotime": "^1.0.0",
-    "typeface-roboto": "^0.0.54"
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
