Upgrade packages, remove yarn lock and workaround not stable graphs

--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "version": "0.2.1",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.8",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "latest",
-    "@date-io/date-fns": "^1.3.6",
-    "@material-ui/core": "^4.0.2",
-    "@material-ui/icons": "^4.0.1",
-    "@material-ui/styles": "^4.0.2",
-    "apollo-boost": "^0.4.1",
-    "apollo-cache-inmemory": "^1.6.1",
+    "@material-ui/styles": "^4.2.0",
+    "apollo-boost": "^0.4.3",
+    "apollo-cache-inmemory": "^1.6.2",
     "argparse": "^1.0.10",
     "color": "^3.1.2",
     "compression": "^1.7.4",
-    "date-fns": "2.0.0-alpha.27",
-    "graphql": "^14.3.1",
+    "date-fns": "2.0.0-beta.2",
+    "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
     "graphql-tag": "^2.10.1",
     "graphql-type-json": "^0.3.0",
-    "graphql-yoga": "^1.17.4",
+    "graphql-yoga": "^1.18.0",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.24.0",
     "munin-db": "^0.3.1",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.6",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.1",
